2005-03-05  Sampo Kellomaki <sampo@iki.fi>

	* app/app_procs.c: Implemented --show-layers=LAYER,LAYER,... option
	This option permits command line control of which layers are visible.
	Useful when automatically exporting multiple versions of the same
	diagram, e.g. slides with overlays. Added-n switch parsing without POPT.+       * app/app_procs.h: moved prototype of do_convert() to app/app_procs.c
	and made it static since its only used in that file.
	* app/authors.h: added myself
	* doc/en/dia.1: documented the switch
	* doc/en/usage-layers.xml: ditto
	
2005-03-05  Alan Horkan <horkana@tcd.ie>
 
 	* app/interface.c Change Horizontal scroll policy to NEVER for sheets
 	this restores how Dia behaved before the GTK2 port and seems to help 
 	allow the toolbox to be more easily resized.  Bug #108891.
 
2005-03-05  Lars Clausen  <lars@raeder.dk>

	* Civil/civil_motor.shape:
	* Civil/civil_rotor.shape:
	* Logic/and.shape:
	* Logic/buffer.shape:
	* Logic/connector.shape:
	* Logic/inverter.shape:
	* Logic/nand.shape:
	* Logic/nor.shape:
	* Logic/not.shape:
	* Logic/or.shape:
	* Logic/xor.shape:
	* shapes/Assorted/arrow-left-up.shape: 
	* shapes/Assorted/heptagon.shape: 
	* shapes/Assorted/star5.shape: 
	* shapes/Assorted/trapezoid.shape: 
	* shapes/Assorted/triangle-rightangle.shape: Fixed bad use of
	defaults, see bug #169143.

	* sheets/Assorted.sheet.in: Fixed typo patch applied, bug #169114.

	* configure.in: 
	* doc/en/Makefile.am: Finally figured out the right way to ask for
	the manpage xslt.  Closes bug #144539.

2005-03-01  Lars Clausen  <lars@raeder.dk>

	* lib/Makefile.am (nodist_include_HEADERS): 
	* app/Makefile.am: Correctly generate these files from PNGs with
	automake.

	* lib/widgets.h: 
	* lib/libdia.def:
	* lib/widgets.c: Refactor toggle button factory to allow inline
	data.

	* lib/pixmaps/Makefile.am: Unify lib pixmaps.

	* app/makefile.msc (ICON_PNG_PAIRS): 
	* app/dia-app-icons.h: Updated with more icons.

	* lib/Makefile.am: 