@@ -1,28 +1,0 @@
-/* XPM */
-static char * delete_xpm[] = {
-"16 16 9 1",
-" 	c None",
-".	c #0B0B0D",
-"+	c #EBEBE9",
-"@	c #B8B8B9",
-"#	c #9E9E9D",
-"$	c #3E3E3D",
-"%	c #2F2F2D",
-"&	c #242424",
-"*	c #656566",
-"      ...       ",
-"     .++@.      ",
-"  ...........   ",
-" .+++++++@@##.  ",
-" .............  ",
-"  .+$+%+&+.@.   ",
-"  .+$+%+&+.@.   ",
-"  .+$+%+&+.@.   ",
-"  .+$+%+&+.@.   ",
-"  .+$+%+&+.@.   ",
-"  .+$+%+&+.@.   ",
-"  .+$+%+&+.@.   ",
-"  .+$+%+&+.@.   ",
-"  .+$+$+$+%#.   ",
-"  .######**$.   ",
-"   .........    "};
