@@ -1,24 +1,0 @@
-/* XPM */
-static char * lower_xpm[] = {
-"22 18 3 1",
-" 	c None",
-".	c #000000",
-"+	c #7F7F7F",
-"                      ",
-"                      ",
-"                      ",
-"                      ",
-"                      ",
-"                      ",
-"    ..............    ",
-"     ............+    ",
-"      ..........+     ",
-"       ........+      ",
-"        ......+       ",
-"         ....+        ",
-"          ..+         ",
-"           +          ",
-"                      ",
-"                      ",
-"                      ",
-"                      "};
