@@ -1,23 +1,0 @@
-/* XPM */
-static char * new_xpm[] = {
-"16 16 4 1",
-" 	c None",
-".	c #000000",
-"+	c #FFFFFF",
-"@	c #7F7F7F",
-"                ",
-"       ......   ",
-"      ..++++.@  ",
-"     .+.++++.@  ",
-"    .++.++++.@  ",
-"   .....++++.@  ",
-"   .++++++++.@  ",
-"   .++++++++.@  ",
-"   .++++++++.@  ",
-"   .++++++++.@  ",
-"   .++++++++.@  ",
-"   .++++++++.@  ",
-"   .++++++++.@  ",
-"   ..........@  ",
-"    @@@@@@@@@@  ",
-"                "};
