@@ -1,22 +1,0 @@
-/* XPM */
-static char * raise_xpm[] = {
-"16 16 3 1",
-" 	c None",
-".	c #000000",
-"+	c #7F7F7F",
-"                ",
-"                ",
-"                ",
-"                ",
-"                ",
-"       ..       ",
-"      ....+     ",
-"     ......+    ",
-"    ........+   ",
-"   ..........+  ",
-"  ............+ ",
-"   ++++++++++++ ",
-"                ",
-"                ",
-"                ",
-"                "};
